# showcase-yourself

./:  .xo-config.js  .angular-cli.json  .gitignore  .gitlab-ci.yml  .prettierignore  .xo-config.json  .yarnrc.yml  Cargo.toml  Dockerfile  Jenkinsfile  LICENSE  README.md  angular.json  config.schema.json  index.html  loader.js  nginx_server.conf  nuxt.config.js  package-lock.json  package.json  shims.d.ts  tailwind.config.js  tsconfig.json  tslint.json  webpack.config.js
.devcontainer/: devcontainer.json
.github/actions/: setup.yml
.github/actions/boilerplate/: action.yml
.github/workflows/: build.yml
client/: Cargo.toml
client/src/: lib.rs
client/src/components/: footer.rs  link.rs  mod.rs  portrait.rs  profile.rs
client/src/config/: github.rs  mod.rs
client/src/utils/: mod.rs
components/: footer.vue  logo.vue  portrait.vue
css/: buttons.scss  index.scss
e2e/: app.e2e-spec.ts
pages/: index.js  index.scss  index.ts  index.vue
src/: config.json  index.html  sharables.scss  styles.css  styles.scss
src/app/: app.component.css  app.component.html  app.component.scss  app.component.ts  app.module.ts  config-data.ts  config.service.ts
src/app/contact/: contact.component.html  contact.component.scss
src/app/links/: links.component.css  links.component.html  links.component.scss  links.component.spec.ts  links.component.ts
src/app/profile/: profile.component.css  profile.component.html  profile.component.ts
src/app/utils/: constants.ts
src/assets/css/: particle.css  particles_conf.css
static/: config.json
utils/: logos.ts
(+6 files in other folders)
