[package]
name = "client"
version = "0.1.0"
authors = ["mbround18 <12646562+mbround18@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.18"
wasm-bindgen = "0.2.77"
reqwest-wasm = { version = "0.11", features = ["json"] }
serde = "1.0.130"
serde_json = "1.0.68"
wasm-bindgen-futures = "0.4.27"
