[package]
name = "client"
version = "0.1.0"
authors = ["mbround18 <12646562+mbround18@users.noreply.github.com>"]
edition = "2021"
license-file = "../LICENSE"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
reqwest-wasm = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
weblog = "0.3"
wasm-bindgen-futures = "0.4"
